# pi01

./: README.md  start_script.bash
backup/: wpa_supplicants.conf
doc/: installation_raspberry.md  setup_camera.md
doc/brain/: Lien.md  api_hardware-interaction.md  api_user-interaction.md  api_vision-interaction.md
src/brain/: __init__.py  client.py  main.py
src/hardware/: Cargo.toml  client.rs  common.py  hardware_client.py  motor.rs  self_balancing.py  server.rs  types.rs  unit_tests.py
src/user_interaction/: __init__.py  main_ui.py  websocket_datastructures.md
src/user_interaction/webserver/: index.html  tmp_backend.py
src/user_interaction/webserver/css/: index.css  phone.css
src/user_interaction/webserver/js/: dragslide.js  joy.js  main.js
src/vision/: calibration_live.py  main_vision.py  socketsanssocket.py  test_backends.py  testslocaux.py
src/vision/tests/: live_distance.py  live_marker_detection.py
svg/: decoupe.dxf
