[package]
name = "hardware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./server.rs"

[[bin]]
name = "client"
path = "./client.rs"

[dependencies]
anyhow = "1.0.75"
cgmath = "0.18.0"
bytemuck = {version = "1.14.0", features = ["derive"]}
# pwm-pca9685 = "0.3.1"
# bcm283x-linux-gpio = "0.2.0"
